# Dashboard

./: CONTRIBUTING.md  LICENSE.md  README.md
backend/: .env  .gitignore  README.md  pyproject.toml  tables.sql
backend/backend/: .gitignore  constants.py  courses.json  cred.env  database.py  drop.sql  env.example  es.py  external_services.py  main.py  models.py  tables.sql  utils.py
backend/backend/Routes/: auth.py  courses.py  timetable.py
backend/backend/Routes/Auth/: auth.py  controller.py  cookie.py  tokens.py
backend/backend/Routes/Bus/: bus.json  bus_schedule.py
backend/backend/Routes/CabSharing/: cab.py  controller.py  schemas.py
backend/backend/Routes/Lost_and_Found/: found.py  funcs.py  lost.py
backend/backend/Routes/MessMenu/: menu_scraper.py  mess.json  mess_menu.py
backend/backend/Routes/TimeTable/: changes.py  cr.py  custom.py  timetable.py
backend/backend/Routes/Transport/: transport.json  transport_schedule.py
backend/backend/Routes/User/: controller.py  user.py
backend/backend/job_scripts/: bus_scraper.py  clear_lost_found_data_periodically.py  menu_scraper.py  transport_scraper.py
backend/backend/queries/: changes.py  course.py  course_queries.py  courses.py  cr.py  custom.py  found.py  lost.py  lost_and_found.py  timetable.py  user.py
backend/backend/sql/: cabBooking.sql  deleteBooking.sql  details.sql  joinBooking.sql  location.sql  signUp.sql
backend/backend/templates/accept/: body.html  subject.txt
backend/backend/templates/accept_notif/: body.html  subject.txt
backend/backend/templates/create/: body.html  subject.txt
(+148 files in other folders)
